# guardian-ops

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.agent  Dockerfile.api  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  setup.sh
.github/workflows/: rollback.yml  security-deploy.yml  security-scan-self-hosted.yml
cmd/agent/: main.go
cmd/api/: main.go
policies/: security.rego
rust-scanner/: Cargo.toml  README.md
rust-scanner/src/: main.rs
rust-security-analyzer/: Cargo.toml
rust-security-analyzer/src/: lib.rs
