[package]
name = "rust-security-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "security_analyzer"
crate-type = ["cdylib"]  # Compile as shared library for FFI

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
lazy_static = "1.4"
anyhow = "1"

# tree-sitter compatibility pinned to 0.20.x
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-javascript = "0.20.1"
tree-sitter-python = "0.20.4"
tree-sitter-go = "0.20.0"
tree-sitter-typescript = "0.20.3"

